ayon-ash-kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayon-worker
  namespace: ayon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayon-worker
  template:
    metadata:
      labels:
        app: ayon-worker
    spec:
      serviceAccountName: ayon-worker    
      containers:
        - name: ayon-worker
          image: balajidd/ash:1.7.0
          imagePullPolicy: Always
