ayon-ash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayon-worker
  namespace: ayon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayon-worker
  template:
    metadata:
      labels:
        app: ayon-worker
    spec:
      containers:
        - name: ayon-worker
          image: balajidd/ash:1.5.0  
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: tls-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: ayon-tls
