ayon-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayon-worker
  namespace: ayon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayon-worker
  template:
    metadata:
      labels:
        app: ayon-worker
    spec:
      containers:
        - name: ayon-worker
          image: balajidd/ash:1.3.0  
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: tls-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: ayon-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shotgrid-leecher
  namespace: ayon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shotgrid-leecher
  template:
    metadata:
      labels:
        app: shotgrid-leecher
    spec:
      containers:
        - name: leecher
          image: balajidd/leecher:1.0.0
          imagePullPolicy: Always
          volumeMounts:
            - name: tls-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: ayon-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shotgrid-processor
  namespace: ayon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shotgrid-processor
  template:
    metadata:
      labels:
        app: shotgrid-processor
    spec:
      containers:
        - name: processor
          image: balajidd/processor:1.0.0
          imagePullPolicy: Always
          volumeMounts:
            - name: tls-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: ayon-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shotgrid-transmitter
  namespace: ayon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shotgrid-transmitter
  template:
    metadata:
      labels:
        app: shotgrid-transmitter
    spec:
      containers:
        - name: transmitter
          image: balajidd/transmitter:1.0.0
          imagePullPolicy: Always
          volumeMounts:
            - name: tls-volume
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: ayon-tls
