ddspace-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-space
  namespace: dd-space
  labels:
    app: web-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-space
  template:
    metadata:
      labels:
        app: web-space
    spec:
      containers:
      - name: web-space
        image: balajidd/iospace:1.2.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-space-service
  namespace: dd-space
spec:
  selector:
    app: web-space
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 32000 # NodePort to expose the service
  type: NodePort
