zulip-deploy-secure.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: zulip
spec:
  selector:
    app: postgres
  ports:
    - name: db
      port: 5432
      targetPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: zulip
  namespace: zulip
spec:
  selector:
    app: zulip
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443

---

# PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: zulip/zulip-postgresql:14
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: zulip-postgres-pvc

---

# Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          command: ["sh", "-euc", "echo \"requirepass '$$REDIS_PASSWORD'\" > /etc/redis.conf && exec redis-server /etc/redis.conf"]
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: zulip-redis-pvc

---

# RabbitMQ
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4.0.7
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: zulip-rabbitmq-pvc

---

# Memcached
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:alpine
          command: ["sh", "-euc", "echo 'mech_list: plain' > $$SASL_CONF_PATH && echo \"zulip@$$HOSTNAME:$$MEMCACHED_PASSWORD\" > $$MEMCACHED_SASL_PWDB && echo \"zulip@localhost:$$MEMCACHED_PASSWORD\" >> $$MEMCACHED_SASL_PWDB && exec memcached -S"]
---

# Zulip
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip
  namespace: zulip
spec:
  template:
    spec:
      securityContext:
        fsGroup: 1000
  replicas: 1
  selector:
    matchLabels:
      app: zulip
  template:
    metadata:
      labels:
        app: zulip
    spec:
      containers:
        - name: zulip
          image: zulip/docker-zulip:10.3-0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: zulip-storage
              mountPath: /data
      volumes:
        - name: zulip-storage
          persistentVolumeClaim:
            claimName: zulip-pvc


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zulip-ingress
  namespace: zulip
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zulip.d2-india.com
      secretName: zulip-tls  
  rules:
    - host: zulip.d2-india.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zulip
                port:
                  number: 80
